force-app/main/default/objects/LoggingSettings__c/LoggingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for more control on logging.</description>
    <label>Logging Settings</label>
</CustomObject>