force-app/main/default/objects/LoggingSettings__c/fields/DefaultLoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>DefaultLoggingLevel__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Source - Salesforce;Integrity - Trusted</complianceGroup>
    <defaultValue>&quot;ERROR&quot;</defaultValue>
    <description>Default logging level for a user or profile. Values can be: ERROR, INFO, DEBUG.</description>
    <inlineHelpText>Default logging level for a user or profile. Values can be: ERROR, INFO, DEBUG.</inlineHelpText>
    <label>Default Logging Level</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>