force-app/main/default/objects/LoggingSettings__c/fields/DefaultLogRetentionDuration__c.field-meta.xml
<CustomField>
    <fullName>DefaultLogRetentionDuration__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Source - Salesforce;Integrity - Trusted</complianceGroup>
    <defaultValue>30</defaultValue>
    <description>Default number of days to retains logs (to be used in batch purger).</description>
    <inlineHelpText>Default number of days to retains logs (to be used in batch purger).</inlineHelpText>
    <label>Default Log Retention Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>