force-app/main/default/objects/LoggingSettings__c/fields/DefaultSaveMethod__c.field-meta.xml
<CustomField>
    <fullName>DefaultSaveMethod__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Source - Salesforce;Integrity - Trusted</complianceGroup>
    <defaultValue>&quot;EVENT_BUS&quot;</defaultValue>
    <description>Default save method for a user or profile. Values can be: EVENT_BUS or QUEUEABLE.</description>
    <inlineHelpText>Default save method for a user or profile. Values can be: EVENT_BUS or QUEUEABLE.</inlineHelpText>
    <label>Default Save Method</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>