force-app/main/default/objects/LoggingSettings__c/fields/SecureLogEnabled__c.field-meta.xml
<CustomField>
    <fullName>SecureLogEnabled__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Source - Salesforce;Integrity - Trusted</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Specifies if Secure Log is enabled for a user or profile. If this is false, no secure logs will be created for the user/profile.</description>
    <inlineHelpText>Specifies if Secure Log is enabled for a user or profile. If this is false, no secure logs will be created for the user/profile.</inlineHelpText>
    <label>Secure Log Enabled</label>
    <type>Checkbox</type>
</CustomField>